# sweeps

./: .clang-format  .gitignore  AbaqusInput.cpp  AbaqusInput.hpp  CMakeLists.txt  Cell.hpp  CombinatorialMap.hpp  CombinatorialMapBoundary.cpp  CombinatorialMapBoundary.hpp  CombinatorialMapMethods.cpp  CombinatorialMapMethods.hpp  CombinatorialMapRestriction.cpp  CombinatorialMapRestriction.hpp  Dart.cpp  Dart.hpp  GlobalCellMarker.hpp  GlobalDartMarker.hpp  LICENSE  LICENSE.txt  Laplace.cpp  Laplace.hpp  Logging.cpp  Logging.hpp  QuadLayoutInput.cpp  QuadLayoutInput.hpp  README.md  Simplex.cpp  Simplex.hpp  SimplexUtilities.cpp  SimplexUtilities.hpp  SimplicialComplex.cpp  SimplicialComplex.hpp  SmallQueue.hpp  SmallVector.hpp  SweepInput.hpp  TempUtils.hpp  TetMeshCombinatorialMap.cpp  TetMeshCombinatorialMap.hpp  Tracing.cpp  Tracing.hpp  (+3 more)
src/: AbaqusInput.cpp  CMakeLists.txt  Cell.cpp  Cell.hpp  CombinatorialMap.hpp  CombinatorialMapBoundary.cpp  CombinatorialMapBoundary.hpp  CombinatorialMapMethods.cpp  CombinatorialMapMethods.hpp  CombinatorialMapRestriction.cpp  CombinatorialMapRestriction.hpp  Dart.hpp  GlobalCellMarker.hpp  Laplace.cpp  Laplace.hpp  LevelSetCMap.cpp  LevelSetCMap.hpp  QuadLayoutInput.cpp  Simplex.cpp  SimplexUtilities.cpp  SimplexUtilities.hpp  SweepInput.hpp  TetMeshCombinatorialMap.cpp  TetMeshCombinatorialMap.hpp  Tracing.cpp  Tracing.hpp  TriMeshCombinatorialMap.hpp  main.cpp
src/api/: CMakeLists.txt  EigenfunctionAPI.cpp  NavierStokesDiscretization.cpp  NavierStokesDiscretization.hpp  PythonAPI.cpp  SplinesAPI.cpp  SweepAPI.cpp  SweepAPIMethods.cpp  SweepAPIMethods.hpp
src/basis/: BSplineSpace1d.cpp  BSplineSpace1d.hpp  BasisComplex.cpp  BasisComplex.hpp  BasisComplex1d.cpp  BasisComplex1d.hpp  BasisMesh.cpp  BasisMesh.hpp  CMakeLists.txt  DivConfBasisComplex.cpp  DivConfBasisComplex.hpp  DivConfHierarchicalTPSplineSpace.cpp  DivConfHierarchicalTPSplineSpace.hpp  DivConfTPSplineSpace.cpp  DivConfTPSplineSpace.hpp  FunctionId.hpp  GenericSplineSpace.cpp  GenericSplineSpace.hpp  HierarchicalMultiPatchBasisComplex.cpp  HierarchicalMultiPatchBasisComplex.hpp  HierarchicalMultiPatchSplineSpace.cpp  HierarchicalMultiPatchSplineSpace.hpp  HierarchicalTPBasisComplex.cpp  HierarchicalTPBasisComplex.hpp  HierarchicalTPSplineSpace.cpp  HierarchicalTPSplineSpace.hpp  KnotVector.cpp  KnotVector.hpp  LocalBasis.cpp  LocalBasis.hpp  MultiPatchBasisComplex.cpp  MultiPatchBasisComplex.hpp  MultiPatchSplineSpace.cpp  MultiPatchSplineSpace.hpp  ParentBasis.cpp  ParentBasis.hpp  SplineSpace.cpp  SplineSpace.hpp  TPBasisComplex.cpp  TPBasisComplex.hpp  (+2 more)
src/eval/: CMakeLists.txt  ParentBasisEval.cpp  ParentBasisEval.hpp  SplineSpaceEvaluator.cpp  SplineSpaceEvaluator.hpp
src/fitting/: CMakeLists.txt  CoonsPatch.cpp  CoonsPatch.hpp  FittingUtilities.cpp  FittingUtilities.hpp  HexMeshOptimization.cpp  HexMeshOptimization.hpp  LeastSquaresFitting.cpp  LeastSquaresFitting.hpp
src/io/: AbaqusInput.cpp  AbaqusInput.hpp  CMakeLists.txt  MFEMOutput.cpp  MFEMOutput.hpp  MeshInput.cpp  MeshInput.hpp  OBJOutput.cpp  OBJOutput.hpp  QuadLayoutInput.cpp  VTKOutput.cpp  VTKOutput.hpp
src/mapping/: AABB.cpp  AABB.hpp  CMakeLists.txt  GeometricMapping.cpp  GeometricMapping.hpp  OrbifoldMapping.cpp  OrbifoldMapping.hpp  SimplexUtilities.cpp  SimplexUtilities.hpp  TriangleMeshCircleMapping.cpp  TriangleMeshCircleMapping.hpp  TriangleMeshMapping.cpp  TriangleMeshMapping.hpp
src/param/: CMakeLists.txt  HierarchicalMultiPatchParametricAtlas.cpp  HierarchicalMultiPatchParametricAtlas.hpp  HierarchicalTPParametricAtlas.cpp  HierarchicalTPParametricAtlas.hpp  Laplace.cpp  Laplace.hpp  MultiPatchParametricAtlas.cpp  MultiPatchParametricAtlas.hpp  ParametricAtlas.cpp  ParametricAtlas.hpp  ParametricAtlas1d.cpp  ParametricAtlas1d.hpp  ParentDomain.cpp  ParentDomain.hpp  ParentPoint.cpp  ParentPoint.hpp  SimplexUtilities.hpp  TPParametricAtlas.cpp  TPParametricAtlas.hpp  Tracing.hpp  TriangleParametricAtlas.cpp  TriangleParametricAtlas.hpp
src/reparam/: CMakeLists.txt  CriticalPoints.cpp  CriticalPoints.hpp  Foliation.cpp  Foliation.hpp  Laplace.cpp  Laplace.hpp  SimplexUtilities.cpp  Tracing.cpp  Tracing.hpp
src/simplex/: CMakeLists.txt  Simplex.cpp  Simplex.hpp  SimplicialComplex.cpp  SimplicialComplex.hpp  SweepInput.hpp
src/topology/: CMakeLists.txt  Cell.cpp  Cell.hpp  CombinatorialMap1d.cpp  CombinatorialMap1d.hpp  CombinatorialMapBoundary.cpp  CombinatorialMapBoundary.hpp  CombinatorialMapMethods.cpp  CombinatorialMapMethods.hpp  CombinatorialMapRestriction.cpp  CombinatorialMapRestriction.hpp  CustomCombinatorialMap.cpp  CustomCombinatorialMap.hpp  CutCombinatorialMap.cpp  CutCombinatorialMap.hpp  Dart.cpp  Dart.hpp  DartRange.cpp  DartRange.hpp  DelaunayTriangulation.cpp  DelaunayTriangulation.hpp  Dijkstra.cpp  Dijkstra.hpp  GlobalCellMarker.hpp  GlobalDartMarker.hpp  HierarchicalMultiPatchCombinatorialMap.cpp  HierarchicalMultiPatchCombinatorialMap.hpp  HierarchicalTPCombinatorialMap.cpp  LevelSetCMap.cpp  (+19 more)
test/: CMakeLists.txt  CoonsPatch_test.cpp  CriticalPoints_test.cpp  CustomEigen_test.cpp  CutCombinatorialMap_test.cpp  Dijkstra_test.cpp  DivConfTPSplineSpace_test.cpp  FitToFoliation_test.cpp  Foliation_test.cpp  HierarchicalMultiPatchCMap_test.cpp  HierarchicalMultiPatchSplineSpace_test.cpp  HierarchicalTPCMap_test.cpp  HierarchicalTPPAtlas_test.cpp  HierarchicalTPSplineSpace_test.cpp  IndexOperations_test.cpp  MultiPatchCombinatorialMap_test.cpp  MultiPatchDecomposition_test.cpp  MultiPatchSplineSpace_test.cpp  NonDiskFoliation_test.cpp  SimplicialComplexTestCases.hpp  SphereFoliation_test.cpp  SplineSpace1d_test.cpp  SplineSpaceEvaluator_test.cpp  TPCombinatorialMap_test.cpp  TPParametricAtlas_test.cpp  TriangleMeshCircleMapping_test.cpp  TriangleMeshMapping_test.cpp  boundary_map_tests.cpp  cgogn_tests.cpp  laplace_tests.cpp  levelset_map_tests.cpp  macaroni_cell_tracing_test.cpp  macaroni_interior_face_tracing_test.cpp  macaroni_vertex_tracing_test.cpp  simple_mesh.inp  simplex_utility_tests.cpp  tet_map_tests.cpp  tracing_tests.cpp  tri_map_tests.cpp
(+77 files in other folders)
